# sato-icon-theme

./: COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  index.theme
16x16/: Makefile.in
16x16/actions/: Makefile.am  Makefile.in
16x16/apps/: Makefile.am  Makefile.in
16x16/devices/: Makefile.am  Makefile.in
16x16/mimetypes/: Makefile.am  Makefile.in
16x16/places/: Makefile.am  Makefile.in
16x16/status/: Makefile.am  Makefile.in
16x16/stock/: Makefile.am  Makefile.in
22x22/: Makefile.am  Makefile.in
22x22/actions/: Makefile.am  Makefile.in
22x22/apps/: Makefile.am  Makefile.in
22x22/devices/: Makefile.am  Makefile.in
22x22/mimetypes/: Makefile.am  Makefile.in
22x22/places/: Makefile.am  Makefile.in
22x22/status/: Makefile.am  Makefile.in
22x22/stock/: Makefile.am  Makefile.in
32x32/: Makefile.in
32x32/actions/: Makefile.am  Makefile.in
32x32/apps/: Makefile.am  Makefile.in
32x32/devices/: Makefile.am  Makefile.in
32x32/mimetypes/: Makefile.am  Makefile.in
32x32/places/: Makefile.am  Makefile.in
32x32/status/: Makefile.am  Makefile.in
32x32/stock/: Makefile.am  Makefile.in
48x48/: Makefile.in
48x48/actions/: Makefile.am  Makefile.in
48x48/apps/: Makefile.am  Makefile.in
48x48/devices/: Makefile.am  Makefile.in
48x48/mimetypes/: Makefile.am  Makefile.in
48x48/places/: Makefile.am  Makefile.in
48x48/status/: Makefile.am  Makefile.in
48x48/stock/: Makefile.am  Makefile.in
64x64/: Makefile.am  Makefile.in
64x64/actions/: Makefile.am  Makefile.in
64x64/apps/: Makefile.am  Makefile.in
64x64/devices/: Makefile.am  Makefile.in
64x64/mimetypes/: Makefile.am  Makefile.in
64x64/places/: Makefile.am  Makefile.in
64x64/status/: Makefile.am  Makefile.in
64x64/stock/: Makefile.am  Makefile.in
