themedir = $(datadir)/icons/Sato/32x32/actions
theme_DATA = gtk-go-back-ltr.png gtk-go-down.png gtk-go-forward-ltr.png gtk-go-up.png gtk-media-playback-pause.png gtk-media-playback-start.png gtk-media-record.png gtk-media-seek-backward.png gtk-media-seek-forward.png gtk-media-stop.png gtk-zoom-in.png gtk-zoom-out.png
EXTRA_DIST = $(theme_DATA)
MAINTAINERCLEANFILES = Makefile.in
