themedir = $(datadir)/icons/Sato/64x64/apps
theme_DATA = accessories-text-editor.png applications-games.png audio-player.png contacts.png dates.png file-manager.png im-client.png preferences-desktop-theme.png preferences-system.png sync.png tasks.png task-switcher.png utilities-terminal.png video-player.png voice-call.png web-browser.png
EXTRA_DIST = $(theme_DATA)
MAINTAINERCLEANFILES = Makefile.in
